infra/k8s/jobs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jobs
  name: jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs
  template:
    metadata:
      labels:
        app: jobs
    spec:
      containers:
        - image: registry.digitalocean.com/cinelly-container-registry/jobs
          name: jobs
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jobs
  name: jobs
spec:
  selector:
    app: jobs
  ports:
    - name: jobs
      port: 3000
      protocol: TCP
      targetPort: 3000
  type: NodePort
