infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinelly
spec:
  rules:
    - host: www.cinelly.online
      http:
        paths:
          - path: /expertises/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: expertises
                port:
                  number: 3001
          - path: /jobs/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jobs
                port:
                  number: 3000
#---
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
#    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.cinelly.online'
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.3
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.32.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: controller
#  name: ingress-nginx-controller
#  namespace: ingress-nginx
#spec:
#  type: LoadBalancer
#  externalTrafficPolicy: Local
#  ports:
#    - name: http
#      port: 80
#      protocol: TCP
#      targetPort: http
#    - name: https
#      port: 443
#      protocol: TCP
#      targetPort: https
#  selector:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/component: controller
